--- a/index.html
+++ b/index.html
@@ -3,34 +3,53 @@
 
 	<head>
 		<title>Color Blind</title>
+
+		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	</head>
 
 	<body>
-		<h1>Color Blind</h1>
+		<header>
+			<h1 id="title">Color Blind</h1>
 
-		<h2>
-			Red, White, or Rose' We're Having Fun Today
-		</h2>
+			<h2>
+				Red, White, or Rose' We're Having Fun Today
+			</h2>
 
-		<p>
-			Our <strong>mission</strong> is to bring <em>wines of all colors</em> to the masses!
-		</p>
+			<p>
+				Our <strong>mission</strong> is to bring <em>wines of all colors</em> to the masses!
+			</p>
+		</header>
 
-		<h3>Our Services</h3>
-		<ul>
-			<li>Professional wine selection for any event</li>
-			<li>On-site wine tastings</li>
-			<li>Delivery for your Netflix binge-fests</li>
-		</ul>
+		<main>
+			<h2>Our Services</h2>
 
-		<br>
-		<hr>
-		<img src="images/wine.jpg" width="400px" alt="3 colors of wine">
+			<div class="photo-box">
+				<img src="images/wine.jpg" alt="3 colors of wine">
+				<h4>Professional wine selection for any event</h4>
+			</div>
 
-		<a href="https://twitter.com/thegreengreek" target="_blank">
-			Follow us on Twitter!
-		</a>
+			<div class="photo-box">
+				<img src="images/wine.jpg" alt="3 colors of wine">
+				<h4>On-site wine tastings</h4>
+			</div>
+
+			<div class="photo-box">
+				<img src="images/wine.jpg" alt="3 colors of wine">
+				<h4>Delivery for your Netflix binge-fests</h4>
+			</div>
+
+			<div class="more-info">
+				<p>Come in today for more info</p>
+			</div>
+		</main>
+
+		<footer>
+			<a href="https://twitter.com/thegreengreek" target="_blank">
+				<i class="fa fa-twitter fa-2x"></i> Follow us on Twitter!
+			</a>
+		</footer>
 		
 	</body>
 
